--- a/mycss_tablet.css
+++ b/mycss_tablet.css
@@ -1,1 +1,48 @@
+@media rule {
+  
+  h1 {
+    background-color: gainsboro;
+  }
+  
+  .myclassselector {
+    background-color: grey;
+  }
+}
+
+@media print {
+  
+  .screen_only {
+    display: none;
+  }
+}
+
+@media (max-width: 640px) {
+  body {
+    background-color: grey;
+  }
+  
+  h1 {
+    background-color: green;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 640px) {
+  body {
+    background-color: gray;
+  }
+}
+
+@media (min-width: 700px) {
+  body {
+    background-color: grey;
+  }
+}
+
+@media (max-width: 640px) {
+  .title {
+    background-color: white;
+  }
+}
+
+## Bootstrap
 
