--- a/mycss_web.css
+++ b/mycss_web.css
@@ -12,7 +12,7 @@ h1 {
   text-align: center;
 }
 #heading {
-  background-color: white;
+  background-color: black;
   text-align: center;
   font-size: 10em;
 }
