--- a/mycss_web.css
+++ b/mycss_web.css
@@ -2,9 +2,9 @@
 <html>
 <head>
 <style>
-h1 {
-  color: red;
-  background-color: white;
+p {
+  color: black;
+  background-color: green;
   text-align: center;
 }
 .aqua-background {
