--- a/mycss_web.css
+++ b/mycss_web.css
@@ -18,7 +18,7 @@ h4 {
 }
 #educationborder {
   border-radius: 20px;
-  background: crimson;
+  background: darkslategray;
   padding: 20px;
   width: 1000px;
   height: 200px;
