--- a/mycss_web.css
+++ b/mycss_web.css
@@ -24,6 +24,7 @@ h4 {
   height: 200px;
 }   
 .pp {font-family: "Copperplate", fantasy;}
+.p0 {font-family: "Times New Roman", serif;}
 </style>
 </head>
 <body>
