--- a/mycss_web.css
+++ b/mycss_web.css
@@ -13,6 +13,9 @@ h4 {
 ul.ace {
   list-style-type: square;
 }
+ul li {
+  margin: 10px;
+}
 .aqua-background {
   background-color: aqua;
   text-align: center;
