--- a/mycss_web.css
+++ b/mycss_web.css
@@ -15,6 +15,7 @@ ul li {margin: 10px;}
   text-align: center;
 }
 #heading {
+  color: green;
   background-color: black;
   text-align: center;
   font-size: 10em;
